style todo application

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -44,3 +44,5 @@
 @import "base/variables";
 @import "components/Nav";
 @import "components/pages";
+@import "components/container";
+@import "components/todo";
